fixed css will be moving to stretch

--- a/src/CSS/App.scss
+++ b/src/CSS/App.scss
@@ -17,3 +17,16 @@
     background: whitesmoke;
   }
 }
+
+a {
+  text-decoration: none;
+}
+
+a:link,
+a:visited {
+  color: inherit;
+}
+
+* {
+  box-sizing: border-box;
+}
