--- a/src/CSS/list-notes.scss
+++ b/src/CSS/list-notes.scss
@@ -1,5 +1,7 @@
 .list-container {
   margin: 20px auto;
+  max-height: 1000px;
+  overflow-x: hidden;
   .list-heading {
     font-family: 'Roboto';
     font-size: 30px;
@@ -9,30 +11,32 @@
   .list-notes {
     display: flex;
     flex-wrap: wrap;
-
+    width: 100%;
     .notes {
       font-family: 'Roboto';
       width: 20%;
       height: 150px;
-      margin: 50px auto;
+      margin: 30px 20px;
       border: 2px solid gray;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      text-overflow: ellipsis;
       .notes-heading {
         width: 70%;
         padding-bottom: 10px;
         border-bottom: 3px solid grey;
         margin: 10px auto;
-        overflow: hidden;
+        overflow-x: 30px;
         text-overflow: ellipsis;
       }
 
       .notes-paragraph {
         width: 70%;
-        height: 20px;
-        border-bottom: 2px solid grey;
-        margin: 10px auto;
-        white-space: nowrap;
         padding-bottom: 10px;
-        overflow: hidden;
+        margin: 10px auto;
+        word-break: break-all;
+        overflow-x: hidden;
         text-overflow: ellipsis;
       }
     }
